src/style.css
/* MAIN */
body {
    color: #fff;
    background-color: #000;
    font: 1.2rem/1.6em Iosevka Aile, sans-serif;
    padding: 0.5em;
    margin: 0.5em auto;
    max-width: 45em;
}

/* HEADERS */
h1,h2,h3 { text-transform: lowercase; }

h1 { margin: 0.5em 0 0 0; }

/* LINKS */
a {
    color: #268bd2;
    text-decoration: none;
}

a:hover { text-decoration: underline; }

/* CODE */
pre {
    font-family: Iosevka, monospace;
    overflow-x: auto;
}


code, pre {
    background-color: #ddd;
    color: #000;
    border-radius: 0.25em;
    padding: 0.25em;
}

/* OTHER */
table, th, td {
    border-collapse: collapse;
    border: 0.1em solid #fff;
    padding: 0.3em;
    overflow-wrap: break-word;
}

ul, ol {
    padding: 0;
    list-style-position: inside;
}

hr {
    border-top: 0.1em solid #ddd;
    border-radius: 0.25em;
}

footer { font-size: 0.8em; }

/* ARTICLES */

p.date {
    margin-top: 0.1em;
    font-size: 0.8em;
}

ul.articles { list-style: none; }
li p:last-child { margin: 0; }
li ul, li ol { margin-left: 1em; }

.social ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    overflow: hidden;
}

.social ul li {
    display: inline-block;
    list-style-type: none;
}

header {
    display: flex;
    flex-wrap: wrap;
}

header p {
    margin: 0;
    padding-right: 1vw;
    flex: 1; /* pushes nav to the right */
    white-space: nowrap;
}

nav a:not(:last-of-type) {
    margin-right: 1vw;
}

